--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Panda Commerce</title>
+    <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- font awesome link -->
+    <script src="https://kit.fontawesome.com/0afd6d1cb6.js" crossorigin="anonymous"></script>
+    <!-- external css link  -->
+    <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
     <header>
         <div class="container">
+            <!-- nav start  -->
             <nav class="navbar navbar-expand-lg bg-light px-3">
                 <a class="navbar-brand" href="#">
                   <img src="images/logo.png" alt="">
@@ -25,9 +32,76 @@
                   </div>
                 </div>
             </nav>
+            <!-- nav end  -->
+
+            <!-- slider start -->
+            <div id="carouselExampleControls" class="carousel slide mt-5" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active p-5 rounded" style="background-color:#FEEAE9;">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex align-items-center">
+                            <div>
+                                <h1>Mi LED TV 4A PRO 32</h1>
+                                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                                <h2 class="pt-3">$1289</h2>
+                                <button class="btn mt-2">
+                                    <a class="text-decoration-none text-light p-3" href="">BUY NOW <i class="fa-solid fa-arrow-right"></i></a>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 d-flex align-items-center">
+                            <img class="img-fluid" src="images/banner-images/tv.png" alt="">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item p-5 rounded" style="background-color:#FEEAE9;">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex align-items-center">
+                            <div>
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                                <h2 class="pt-3">$420</h2>
+                                <button class="btn mt-2">
+                                    <a class="text-decoration-none text-light p-3" href="">BUY NOW <i class="fa-solid fa-arrow-right"></i></a>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 d-flex align-items-center">
+                            <img class="img-fluid" src="images/banner-images/headphone.png" alt="">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item p-5 rounded" style="background-color:#FEEAE9;">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex align-items-center">
+                            <div>
+                                <h1>X-Box for your living room</h1>
+                                <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
+                                <h2 class="pt-3">$600</h2>
+                                <button class="btn mt-2">
+                                    <a class="text-decoration-none text-light p-3" href="">BUY NOW <i class="fa-solid fa-arrow-right"></i></a>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 d-flex align-items-center">
+                            <img class="img-fluid" src="images/banner-images/xbox.png" alt="">
+                        </div>
+                    </div>
+                  </div>
+                  
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            <!-- slider end -->
         </div>
     </header>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
