--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
                   <div>
                     <h1>Cool Dude Head phone</h1>
                     <p>
-                      This is the best headphone in the world for people who just want to waste time in front of funky world.
+                      Amet minim mollit non deserunt ullamco est sit aliqua
+                      dolor do amet sint. Velit officia consequat duis enim
+                      velit mollit. Exercitation veniam consequat sunt nostrud
+                      amet.
                     </p>
                     <h2 class="pt-3">$420</h2>
                     <button class="btn mt-2">
@@ -127,7 +130,10 @@
                   <div>
                     <h1>X-Box for your room</h1>
                     <p>
-                      This is the best x-box in the world for people who just want to waste time in front of fake sports.
+                      Amet minim mollit non deserunt ullamco est sit aliqua
+                      dolor do amet sint. Velit officia consequat duis enim
+                      velit mollit. Exercitation veniam consequat sunt nostrud
+                      amet.
                     </p>
                     <h2 class="pt-3">$600</h2>
                     <button class="btn mt-2">
