category section complete

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div
-            class="collapse navbar-collapse justify-content-end"
+            class="collapse navbar-collapse justify-content-end p-2"
             id="navbarNavAltMarkup"
           >
-            <div class="navbar-nav">
+            <div class="navbar-nav text-center">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#">Product</a>
               <a class="nav-link" href="#">About Us</a>
@@ -176,6 +176,38 @@
         <!-- slider end -->
       </div>
     </header>
+
+    <!-- category section start -->
+    <section class="mt-5">
+      <div class="container">
+        <h3>Categories</h3>
+        <div class="container overflow-hidden text-center categories mt-4">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+              <div class="d-flex justify-content-between align-items-center cat1 rounded p-3">
+                <h3>Watch</h3>
+                <img src="images/categories/watch.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+              <div class="d-flex justify-content-between align-items-center cat2 rounded p-3">
+                <h3>Bag</h3>
+                <img src="images/categories//bag.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+              <div class="d-flex justify-content-between align-items-center cat3 rounded p-3">
+                <h3>Shoes</h3>
+                <img src="images/categories/shoes.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- category section end -->
+
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
