--- a/index.html
+++ b/index.html
@@ -207,7 +207,92 @@
     </section>
     <!-- category section end -->
 
-    
+    <!-- shoes section start -->
+    <section id="shoes" class="mt-5">
+      <div class="container">
+        <h3 class="pt-5 pb-3">Shoes</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4 pb-5">
+          <div class="col">
+            <div class="card h-100 border-0">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body px-4">
+                <h4 class="card-title">Supply 350</h4>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                <h4>$120</h4>
+                <a class="btn btn-dark mb-4" href="">BUY NOW <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-0">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body px-4">
+                <h4 class="card-title">Nike 360</h4>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h4>$320</h4>
+                <a class="btn btn-dark mb-4" href="">BUY NOW <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-0">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body px-4">
+                <h4 class="card-title">Red Airmax</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                <h4>$350</h4>
+                <a class="btn btn-dark mb-4" href="">BUY NOW <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+    <!-- shoes section end -->
+
+    <!-- backpack section start -->
+    <section id="backpack">
+      <div class="container">
+        <h3 class="pt-5 pb-3">Backpack</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4 pb-5">
+          <div class="col">
+            <div class="card h-100 border-0">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body px-4">
+                <h4 class="card-title">Ison Backpack</h4>
+                <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                <h4>$120</h4>
+                <a class="btn btn-dark mb-4" href="">BUY NOW <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-0">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body px-4">
+                <h4 class="card-title">Biaowang Backpack</h4>
+                <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                <h4>$320</h4>
+                <a class="btn btn-dark mb-4" href="">BUY NOW <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border-0">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body px-4">
+                <h4 class="card-title">Dxyizu WS54 Smart</h4>
+                <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                <h4>$350</h4>
+                <a class="btn btn-dark mb-4" href="">BUY NOW <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- backpack section end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
