--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     <!-- subscribe section end -->
 
     <!-- footer start -->
-    <footer class="text-center pt-5 pb-2">
+    <footer class="container text-center pt-5 pb-2">
       <p><small>
         ©2023. Panda Commerce. All rights reserved. Md Sakibul Islam.
       </small></p>
