--- a/index.html
+++ b/index.html
@@ -22,171 +22,175 @@
   <body>
     <!-- header section start -->
     <header>
-      <!-- nav start  -->
-      <nav class="container navbar fixed-top navbar-expand-lg bg-light px-3">
-        <a class="navbar-brand" href="#carouselExampleControls">
-          <img src="images/logo.png" alt="" />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse justify-content-end p-2"
-          id="navbarNavAltMarkup"
-        >
-          <div class="navbar-nav text-center">
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="#carouselExampleControls"
-              >Home</a
+        <!-- nav start  -->
+        <nav class="navbar fixed-top navbar-expand-lg bg-light px-3">
+          <div class="container">
+            <a class="navbar-brand" href="#home">
+              <img src="images/logo.png" alt="" />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
             >
-            <a class="nav-link" href="#shoes">Shoes</a>
-            <a class="nav-link" href="#backpack">Backpack</a>
-            <a class="nav-link" href="#subscribe">Subscribe</a>
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+              class="collapse navbar-collapse justify-content-end p-2"
+              id="navbarNavAltMarkup"
+            >
+              <div class="navbar-nav text-center">
+                <a class="nav-link active" aria-current="page" href="#home"
+                  >Home</a
+                >
+                <a class="nav-link" href="#shoes">Shoes</a>
+                <a class="nav-link" href="#backpack">Backpack</a>
+                <a class="nav-link" href="#subscribe">Subscribe</a>
+              </div>
+            </div>
           </div>
+        </nav>
+        <!-- nav end  -->
+        <div id="home" style="visibility: hidden">
+          <h1>Invisible</h1>
         </div>
-      </nav>
-      <!-- nav end  -->
-
-      <!-- slider start -->
-      <div
-        id="carouselExampleControls"
-        class="container carousel slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div
-            class="carousel-item p-5 active rounded"
-            style="background-color: #feeae9"
-          >
-            <div class="row">
-              <div
-                class="col-lg-7 d-flex align-items-center order-lg-1 order-2"
-              >
-                <div>
-                  <h1>Mi LED TV 4A PRO 32</h1>
-                  <p>
-                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                    do amet sint. Velit officia consequat duis enim velit
-                    mollit. Exercitation veniam consequat sunt nostrud amet.
-                  </p>
-                  <h2 class="pt-3">$1289</h2>
-                  <button class="btn mt-2">
-                    <a class="text-decoration-none text-light p-3" href=""
-                      >BUY NOW <i class="fa-solid fa-arrow-right"></i
-                    ></a>
-                  </button>
+        <!-- slider start -->
+        <div
+          id="carouselExampleControls"
+          class="container carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div
+              class="carousel-item p-5 active rounded"
+              style="background-color: #feeae9"
+            >
+              <div class="row">
+                <div
+                  class="col-lg-7 d-flex align-items-center order-lg-1 order-2"
+                >
+                  <div>
+                    <h1>Mi LED TV 4A PRO 32</h1>
+                    <p>
+                      Amet minim mollit non deserunt ullamco est sit aliqua
+                      dolor do amet sint. Velit officia consequat duis enim
+                      velit mollit. Exercitation veniam consequat sunt nostrud
+                      amet.
+                    </p>
+                    <h2 class="pt-3">$1289</h2>
+                    <button class="btn mt-2">
+                      <a class="text-decoration-none text-light p-3" href=""
+                        >BUY NOW <i class="fa-solid fa-arrow-right"></i
+                      ></a>
+                    </button>
+                  </div>
+                </div>
+                <div
+                  class="col-lg-5 d-flex align-items-center order-lg-2 order-1"
+                >
+                  <img
+                    class="img-fluid"
+                    src="images/banner-images/tv.png"
+                    alt=""
+                  />
                 </div>
               </div>
-              <div
-                class="col-lg-5 d-flex align-items-center order-lg-2 order-1"
-              >
-                <img
-                  class="img-fluid"
-                  src="images/banner-images/tv.png"
-                  alt=""
-                />
+            </div>
+            <div
+              class="carousel-item p-5 rounded"
+              style="background-color: #feeae9"
+            >
+              <div class="row d-flex .flex-md-column-reverse">
+                <div
+                  class="col-lg-7 d-flex align-items-center order-lg-1 order-2"
+                >
+                  <div>
+                    <h1>Cool Dude Head phone</h1>
+                    <p>
+                      Amet minim mollit non deserunt ullamco est sit aliqua
+                      dolor do amet sint. Velit officia consequat duis enim
+                      velit mollit. Exercitation veniam consequat sunt nostrud
+                      amet.
+                    </p>
+                    <h2 class="pt-3">$420</h2>
+                    <button class="btn mt-2">
+                      <a class="text-decoration-none text-light p-3" href=""
+                        >BUY NOW <i class="fa-solid fa-arrow-right"></i
+                      ></a>
+                    </button>
+                  </div>
+                </div>
+                <div
+                  class="col-lg-5 d-flex align-items-center order-lg-2 order-1"
+                >
+                  <img
+                    class="img-fluid"
+                    src="images/banner-images/headphone.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+            <div
+              class="carousel-item p-5 rounded"
+              style="background-color: #feeae9"
+            >
+              <div class="row d-flex .flex-md-column-reverse">
+                <div
+                  class="col-lg-7 d-flex align-items-center order-lg-1 order-2"
+                >
+                  <div>
+                    <h1>X-Box for your room</h1>
+                    <p>
+                      Amet minim mollit non deserunt ullamco est sit aliqua
+                      dolor do amet sint. Velit officia consequat duis enim
+                      velit mollit. Exercitation veniam consequat sunt nostrud
+                      amet.
+                    </p>
+                    <h2 class="pt-3">$600</h2>
+                    <button class="btn mt-2">
+                      <a class="text-decoration-none text-light p-3" href=""
+                        >BUY NOW <i class="fa-solid fa-arrow-right"></i
+                      ></a>
+                    </button>
+                  </div>
+                </div>
+                <div
+                  class="col-lg-5 d-flex align-items-center order-lg-2 order-1"
+                >
+                  <img
+                    class="img-fluid"
+                    src="images/banner-images/xbox.png"
+                    alt=""
+                  />
+                </div>
               </div>
             </div>
           </div>
-          <div
-            class="carousel-item p-5 rounded"
-            style="background-color: #feeae9"
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
           >
-            <div class="row d-flex .flex-md-column-reverse">
-              <div
-                class="col-lg-7 d-flex align-items-center order-lg-1 order-2"
-              >
-                <div>
-                  <h1>Cool Dude Head phone</h1>
-                  <p>
-                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                    do amet sint. Velit officia consequat duis enim velit
-                    mollit. Exercitation veniam consequat sunt nostrud amet.
-                  </p>
-                  <h2 class="pt-3">$420</h2>
-                  <button class="btn mt-2">
-                    <a class="text-decoration-none text-light p-3" href=""
-                      >BUY NOW <i class="fa-solid fa-arrow-right"></i
-                    ></a>
-                  </button>
-                </div>
-              </div>
-              <div
-                class="col-lg-5 d-flex align-items-center order-lg-2 order-1"
-              >
-                <img
-                  class="img-fluid"
-                  src="images/banner-images/headphone.png"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
-          <div
-            class="carousel-item p-5 rounded"
-            style="background-color: #feeae9"
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
           >
-            <div class="row d-flex .flex-md-column-reverse">
-              <div
-                class="col-lg-7 d-flex align-items-center order-lg-1 order-2"
-              >
-                <div>
-                  <h1>X-Box for your room</h1>
-                  <p>
-                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                    do amet sint. Velit officia consequat duis enim velit
-                    mollit. Exercitation veniam consequat sunt nostrud amet.
-                  </p>
-                  <h2 class="pt-3">$600</h2>
-                  <button class="btn mt-2">
-                    <a class="text-decoration-none text-light p-3" href=""
-                      >BUY NOW <i class="fa-solid fa-arrow-right"></i
-                    ></a>
-                  </button>
-                </div>
-              </div>
-              <div
-                class="col-lg-5 d-flex align-items-center order-lg-2 order-1"
-              >
-                <img
-                  class="img-fluid"
-                  src="images/banner-images/xbox.png"
-                  alt=""
-                />
-              </div>
-            </div>
-          </div>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      <!-- slider end -->
+        <!-- slider end -->
     </header>
     <!-- header section end -->
 
@@ -355,7 +359,8 @@
     <!-- backpack section end -->
 
     <!-- subscribe section end -->
-    <section id="subscribe"
+    <section
+      id="subscribe"
       class="container d-flex justify-content-center align-items-center rounded-3 my-5"
     >
       <div>
@@ -377,9 +382,11 @@
 
     <!-- footer start -->
     <footer class="container text-center pt-5 pb-2">
-      <p><small>
-        ©2023. Panda Commerce. All rights reserved. Md Sakibul Islam.
-      </small></p>
+      <p>
+        <small>
+          ©2023. Panda Commerce. All rights reserved. Sakibul Islam.
+        </small>
+      </p>
     </footer>
     <!-- footer end -->
     <script
